=============================================

This is a snapshot of NetworkManager 1.22 development series.
The API is subject to change and not guaranteed to be compatible
with the later release.
USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!

* Drop support for BlueZ 4. BlueZ 5 was released in 2012 and should
  nowadays be available everywhere.
* Various bug fixes and improvements.

=============================================
NetworkManager-1.20
Overview of changes since NetworkManager-1.18
=============================================

This is a new stable release of NetworkManager.  Notable changes include:

* The libnm-glib library, deprecated in favor of libnm since NetworkManager 1.0,
  and disabled by default since NetworkManager 1.12, has now been removed.
* The DHCP client now defaults to "internal". The default can be overriden
  at build time by using the --with-config-dhcp-default option of the
  configure script or at run time by setting the main.dhcp option in the
  configuration file.
* Added support for configuring fq_codel line discipline and mirred action.
* Added a possibility for distributions to ship dispatcher scripts in /usr/lib.
* Drop deprecated setting "main.monitor-connection-files" in NetworkManager.conf.
  This setting now has no more effect and was disabled by default for a long time.
  Instead, after changes, load files explicitly with `nmcli connection load` or
  `nmcli connection reload`.
* Rework parsing team JSON config in libnm and stricter validate settings.
  With this, NetworkManager rejects settings that it considers invalid while
  still allowing setting arbitrary JSON config directly.
* Drop ibft settings plugin. This functionality is now covered by using
  nm-initrd-generator from initrd to pre-generate in-memory profiles.
* Support "suppress_prefixlength" attribute for policy routing rules.
  This is what wg-quick uses for the "Improved Rule-based Routing" solution,